Closed Bug 536745 Opened 15 years ago Closed 15 years ago

gconf-client.h: No such file or directory

Categories

(Firefox Build System :: General, defect)

x86
Linux
defect
Not set
blocker

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: mnyromyr, Assigned: wolfiR)

References

Details

(Keywords: regression)

Attachments

(3 files)

Building SeaMonkey (comm-central) trunk debug builds under Linux (Kubuntu Ubuntu 8.04.3 LTS) fails since bug 526451 got checked in - backing out makes it compile again: In file included from /home/kd/projekte/mozilla/mozilla.org/src/trunk/mozilla/toolkit/system/gnome/nsGConfService.h:43, from /home/kd/projekte/mozilla/mozilla.org/src/trunk/mozilla/toolkit/system/gnome/nsGnomeModule.cpp:39: ../../../dist/system_wrappers/gconf/gconf-client.h:3:37: error: gconf/gconf-client.h: No such file or directory In file included from /home/kd/projekte/mozilla/mozilla.org/src/trunk/mozilla/toolkit/system/gnome/nsGnomeModule.cpp:39: /home/kd/projekte/mozilla/mozilla.org/src/trunk/mozilla/toolkit/system/gnome/nsGConfService.h:60: error: ISO C++ forbids declaration of ‘GConfClient’ with no type /home/kd/projekte/mozilla/mozilla.org/src/trunk/mozilla/toolkit/system/gnome/nsGConfService.h:60: error: expected ‘;’ before ‘*’ token /home/kd/projekte/mozilla/mozilla.org/src/trunk/mozilla/toolkit/system/gnome/nsGConfService.h: In constructor ‘nsGConfService::nsGConfService()’: /home/kd/projekte/mozilla/mozilla.org/src/trunk/mozilla/toolkit/system/gnome/nsGConfService.h:54: error: class ‘nsGConfService’ does not have any field named ‘mClient’ make[5]: *** [nsGnomeModule.o] Error 1 make[5]: Leaving directory `/home/kd/projekte/mozilla/mozilla.org/obj/sr/mozilla/toolkit/system/gnome' make[4]: *** [libs_tier_toolkit] Error 2 make[4]: Leaving directory `/home/kd/projekte/mozilla/mozilla.org/obj/sr/mozilla' make[3]: *** [tier_toolkit] Error 2 make[3]: Leaving directory `/home/kd/projekte/mozilla/mozilla.org/obj/sr/mozilla' make[2]: *** [default] Error 2 make[2]: Leaving directory `/home/kd/projekte/mozilla/mozilla.org/obj/sr/mozilla' make[1]: *** [default] Error 2 make[1]: Leaving directory `/home/kd/projekte/mozilla/mozilla.org/obj/sr' make: *** [build] Error 2 Probably relevant stuff in my mozconfig: ac_add_options --enable-application=suite ac_add_options --enable-extensions=venkman,inspector,irc,layout-debug,reporter ac_add_options --enable-debug ac_add_options --disable-optimize ac_add_options --enable-chrome-format=symlink ac_add_options --enable-crypto ac_add_options --disable-installer ac_add_options --enable-svg ac_add_options --enable-canvas ac_add_options --enable-calendar # no Wifi in my PC ;-) ac_add_options --disable-necko-wifi
Have you got a autoconf.mk created from configure?
I suppose so, which one do you need? kd@aupertir:~/moz/obj/sr$ find . -iname "*autoconf.mk" -exec ls -la {} \; -rw-r--r-- 1 kd kd 2610 2009-12-25 17:55 ./mozilla/nsprpub/config/autoconf.mk -rw-r--r-- 1 kd kd 20207 2009-12-25 17:55 ./mozilla/config/autoconf.mk -rw-r--r-- 1 kd kd 12616 2009-12-25 16:43 ./mozilla/js/src/config/autoconf.mk -rw-r--r-- 1 kd kd 16851 2009-12-23 20:22 ./config/autoconf.mk -rw-r--r-- 1 kd kd 4143 2009-12-25 17:55 ./directory/c-sdk/config/autoconf.mk (~/moz/obj/sr is the base of my SeaMonkey objdir)
Hmm, probably two of them to be sure: mozilla/config/autoconf.mk config/autoconf.mk
Attachment #419174 - Attachment mime type: application/octet-stream → text/plain
--- snip --- MOZ_ENABLE_GNOMEVFS = MOZ_GNOMEVFS_CFLAGS = MOZ_GNOMEVFS_LIBS = MOZ_ENABLE_GCONF = MOZ_GCONF_CFLAGS = MOZ_GCONF_LIBS = MOZ_ENABLE_GNOME_COMPONENT = 1 MOZ_ENABLE_GIO = MOZ_GIO_CFLAGS = MOZ_GIO_LIBS = MOZ_LIBNOTIFY_CFLAGS = -DPNG_NO_MMX_CODE -I/usr/include/gtk-2.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/dbus-1.0 -I/usr/lib/dbus-1.0/include -I/usr/lib/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/pango-1.0 -I/usr/include/freetype2 -I/usr/include/libpng12 -I/usr/include/pixman-1 MOZ_LIBNOTIFY_LIBS = -lnotify -lgtk-x11-2.0 -ldbus-glib-1 -lgdk-x11-2.0 -latk-1.0 -lgdk_pixbuf-2.0 -lm -lpangocairo-1.0 -lpango-1.0 -lcairo -lgmodule-2.0 -ldl -ldbus-1 -lgobject-2.0 -lglib-2.0 MOZ_ENABLE_LIBNOTIFY = 1 --- snap --- So you don't build gconf, gnomevfs, and gio but only libnotify which is part of mozgnome. Looks like a quite unusual setup and it's not absolutely clear to me why it works with the patch reverted. I'll attach a patch which might fix the issue. Could you please test?
Attached patch possible patchSplinter Review
Ah, I guess you have no libnotify support in your build with the original patch reverted at all and that'y why it doesn't compile that part.
(In reply to comment #7) > possible patch Yes, with this it works again! (In reply to comment #8) > Ah, I guess you have no libnotify support in your build with the original patch > reverted at all and that'y why it doesn't compile that part. Maybe. I installed the packages libnotify1 and libnotify-dev to be able to compile, while I had to throw gnomevfs out of my extension list, because it still wouldn't build back then (half a year ago or so). I don't have libnotify-bin installed - should I?
Attachment #419189 - Flags: review?(ted.mielczarek)
Comment on attachment 419189 [details] [diff] [review] possible patch follow up patch to solve possible build errors. As GConf, GnomeVFS/GIO and libnotify support is separated enough in configure the module include statements need to be fixed. The issue didn't occur in my testcases before so I missed them.
(In reply to comment #9) > Maybe. I installed the packages libnotify1 and libnotify-dev to be able to > compile, while I had to throw gnomevfs out of my extension list, because it > still wouldn't build back then (half a year ago or so). I don't have > libnotify-bin installed - should I? Don't think so. The libraries should be enough to support libnotify notifications. So now every component in mozgnome should be built just based on your build config and environment and not based on each other which didn't make sense.
Assignee: nobody → mozilla
Blocks: 526451
No longer depends on: 526451
(In reply to comment #7) > Created an attachment (id=419189) [details] > possible patch Darwin/X11 (firefox in mozilla-central) also failed with the same gconf-client.h error after the checkin from bug 526451 with pretty much identical options as comment #0. This patch also fixes the building for me.
Attachment #419189 - Flags: review?(ted.mielczarek) → review+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Product: Core → Firefox Build System
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: