Bug 536745 - Fix GConf related build error for certain build configurations. r=ted